replaced test with buttons

--- a/style.css
+++ b/style.css
@@ -62,33 +62,20 @@
     
 }
 
-.bar_list a
-{
-   
-    
-    margin-top: -5%;
-    margin-right: 4%;
-    margin-left: -30px;   
-    font-size: 300%; 
-    font-family: 'New Tegomin', serif;
-    font-weight: bold;
-    align-self: center;
-    margin-bottom: -5%;
-    color: rgb(0, 225, 255);
-}
+
 
 .bar_list b
 {
    
     
-    margin-top: -5%;
+    
     margin-right: 0;
-    margin-left: 60%;   
-    font-size: 300%; 
+    margin-left: 50%;   
+    font-size: 200%; 
     font-family: 'New Tegomin', serif;
     font-weight: bold;
     align-self: center;
-    margin-bottom: -5%;
+    margin-bottom: -8%;
     color: rgb(0, 225, 255);
 }
 
@@ -152,8 +139,35 @@
 }
 
 
-.bar_list a:hover {color: rgb(163, 248, 237);}
-.bar_list b:hover {color: rgb(163, 248, 237);}
+
+.row_buttos
+{
+    background-color: transparent; 
+    color: rgb(0, 225, 255); 
+    border: transparent;
 
 
+    outline: transparent;
+
+    padding-top: 0.5%;
+    margin-right: 4%;
+    margin-left: -30px;   
+    font-size: 220%; 
+    font-family: 'New Tegomin', serif;
+    font-weight: bold;
+    align-self: center;
+    margin-bottom: -10%;
+    
+}
+
+
+
+.bar_list a:hover {color: rgb(213, 253, 248);}
+.bar_list b:hover {color: rgb(213, 253, 248);}
+
+.row_buttos:hover {
+    background-color: rgb(5, 24, 39);
+    color: white;
+    cursor: pointer;
+  }
 
